Theme settings wrong with OpenGL render #31400

Closed
opened 2012-05-11 08:51:51 +02:00 by Mikhail Rachinskiy · 4 comments

%%%1st case
I changed numerics and edge vertex colors in theme settings, but when I tried to use OpenGL render colors are the same as they was in default theme settings, except face area and face angle, so i guess colors are hardcoded somewhere.

2nd case
When I use another object to measure primary object, numerics of measure object in OpenGL render are overlapped with primary object.

Blend file and pics are attached.

Platform:


Windows 7 Home Premium x64

OpenGL:


  • Renderer: 'GeForce GT 240/PCI/SSE2'
  • Vendor: 'NVIDIA Corporation'
  • Version: '3.3.0'

Blender:


Version: 2.63 (sub 4)
Revision: 46498%%%

%%%1st case I changed numerics and edge vertex colors in theme settings, but when I tried to use OpenGL render colors are the same as they was in default theme settings, except face area and face angle, so i guess colors are hardcoded somewhere. 2nd case When I use another object to measure primary object, numerics of measure object in OpenGL render are overlapped with primary object. Blend file and pics are attached. Platform: **** Windows 7 Home Premium x64 OpenGL: **** - Renderer: 'GeForce GT 240/PCI/SSE2' - Vendor: 'NVIDIA Corporation' - Version: '3.3.0' Blender: **** Version: 2.63 (sub 4) Revision: 46498%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Attaches are messed up, so for 1st case it's "viewport1" and "ogl1". For 2nd case "viewport2" and "ogl2".
Blend file only for 2nd case.%%%

%%%Attaches are messed up, so for 1st case it's "viewport1" and "ogl1". For 2nd case "viewport2" and "ogl2". Blend file only for 2nd case.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31400
No description provided.