Fix #31400: opengl offscreen render not respecting theme settings.